<resources>
    <string name="app_name">Score Book</string>
    <string name="search">Search</string>
    <string name="more">More</string>
    <string name="content_description_more">More</string>
    <string name="content_description_search">Search</string>
    <string name="start_a_new_game">Create a new game!</string>
    <string name="enter_new_game_name">Enter new game name</string>
    <string name="enter_new_player_name">Add a new player</string>
    <string name="set_who_wins">Set who wins:</string>
    <string name="start_new_game_button_text">Start New Game</string>
    <string name="high_score">High Score</string>
    <string name="low_score">Low Score</string>
    <string name="add_new_players">Add new players</string>
    <string name="current_players">Current players:</string>
    <string name="add_another_player_text">Add Another Player</string>
    <string name="done_text">Done</string>
    <string name="add_points">Add points</string>
    <string name="end_game">End Game</string>
    <string name="settings">Home</string>
    <string name="home">Home</string>
    <string name="undo">Undo</string>
    <string name="delete">Delete</string>
    <string name="welcome_title">Welcome!</string>
    <string name="welcome_subtitle">Keep score of several games at a time. Name your game, add players, and record points.</string>
    <string name="get_started">Get Started</string>
    <string name="restart_game">Restart Game</string>
    <string name="edit_game">Edit Game</string>
    <string name="common_no">No</string>
    <string name="common_yes">Yes</string>
    <string name="deduct_points">Deduct points</string>
    <string name="game_name_header">Game name:</string>
    <string name="save_game_button_text">Save game</string>
    <string name="cancel_edit_game">Cancel</string>
</resources>