<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/activity_padding_horizontal"
        android:src="@drawable/ic_dashboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/welcome_title"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_margin="@dimen/activity_padding_horizontal"
        android:text="@string/welcome_subtitle"
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/exitWelcomeBtn"
        android:layout_gravity="bottom"
        android:layout_margin="@dimen/activity_padding_horizontal"
        android:text="@string/get_started"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>