<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_margin="@dimen/activity_padding_horizontal"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_padding_horizontal"
        android:layout_marginEnd="48dp"
        android:text="@string/set_who_wins" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/high_score" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/gameRuleSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:showText="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/low_score" />


    </LinearLayout>
</LinearLayout>