<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/addPlayersRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <AutoCompleteTextView
            android:id="@+id/enterNewPlayerEditText"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputEditText.FilledBox"
            android:hint="@string/enter_new_player_name" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
        android:id="@+id/addAnotherPlayer"
        android:layout_width="48dp"
        android:layout_margin="16dp"
        android:layout_height="wrap_content"
        android:src="@android:drawable/ic_input_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/textInputLayout"
        app:layout_constraintBottom_toBottomOf="@id/textInputLayout" />

    <TextView
        android:id="@+id/playersText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/current_players"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/addPlayersButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:clickable="true"
        android:text="@string/done_text"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playersText" />


</androidx.constraintlayout.widget.ConstraintLayout>