<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/addPlayersRoot"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/enterNewPlayerEditText"
            android:hint="@string/enter_new_game_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/playersText"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/current_players"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:orientation="horizontal"
        android:paddingEnd="30dp"
        android:paddingStart="16dp"
        app:layout_constraintTop_toBottomOf="@+id/playersText"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/addAnotherPlayer"
            android:text="@string/add_another_player_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/addPlayer"
            android:clickable="true"
            android:layout_marginStart="16dp"
            android:text="@string/add_player_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>